# OpenTXLog

./: OpenTXLog.cabal  README.md  rewrite.hs  stack.yaml
app/: Main.hs
src/: OpenTXLog.hs
test/: Spec.hs  sample.csv  sample.out  sample.out.csv
test/bench/: Bench.hs
