name:                OpenTXLog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dustin/OpenTXLog#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Sallings
maintainer:          dustin@spy.net
copyright:           2017 Dustin Sallings
category:            Tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenTXLog
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , geodetics
                     , dimensional
                     , time
  default-language:    Haskell2010
  ghc-options:        -Wall

executable OpenTXLog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , OpenTXLog
                     , cassava
                     , time
                     , bytestring
                     , vector
  default-language:    Haskell2010
  ghc-options:        -Wall

test-suite OpenTXLog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , OpenTXLog
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit, test-framework-quickcheck2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dustin/OpenTXLog
